# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md  open_day_files.sh
.cargo/: config.toml
2023/Python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py
2023/Rust/: 01.rs
src/: main.rs
src/template/commands/: mod.rs  scaffold.rs
system/: main.rs  open_day_files.sh
system/template/: aoc_cli.rs
system/template/commands/: open.rs  scaffold.rs
